# gala-tickets

./: .gitignore
APK/: app-debug-unaligned.apk  app-debug.apk  app-release.apk
Development/app/: build.gradle
Development/app/src/androidTest/java/djamelfel/gala/: ApplicationTest.java
Development/app/src/main/: AndroidManifest.xml
Development/app/src/main/java/djamelfel/gala/: Billet.java  Key_List.java  Login.java  Read_QR_Code.java  Settings.java
Development/app/src/main/res/layout/: activity_login.xml  activity_read__qr__code.xml  activity_settings.xml  row_item.xml  toast_failure.xml  toast_success.xml
Development/app/src/main/res/menu/: menu_read__qr__code.xml  menu_settings.xml
Development/app/src/main/res/values/: strings.xml  styles.xml
Development/app/src/test/java/djamelfel/gala/: ExampleUnitTest.java
Development/gradle/wrapper/: gradle-wrapper.properties
Server/: README.md  createDB.sh  ebillet.service  firewall.sh  pyproject.toml
Server/data/: .gitignore  db.sql  keys.json.example
Server/src/: .gitignore  server.py  settings.py
Server/src/media/apk/: .gitignore
Server/src/media/css/: webscan.css
Server/src/templates/: admin.simple  home.simple  recharge.simple
Server/src/views/: admin.simple  home.simple  scan.simple
